--- a/shared_model/builders/protobuf/CMakeLists.txt
+++ b/shared_model/builders/protobuf/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright 2017 Soramitsu Co., Ltd.
+# Copyright 2018 Soramitsu Co., Ltd.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,4 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_subdirectory(protobuf)
+add_library(shared_model_proto_builders
+    impl.cpp
+    )
+
+target_link_libraries(
+    shared_model_proto_builders
+    shared_model_proto_backend
+)
